--- a/.gitignore
+++ b/.gitignore
@@ -12,9 +12,10 @@ bin-release/
 *.air
 *.ipa
 *.apk
-
+#files not needed
+.venv
 __pycache__/
-
+migrations/
 Zap Sessions/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
