--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ bin-release/
 *.apk
 #files not needed
 .venv
+migrations/
 __pycache__/
 Zap Sessions/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
